--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
       <!-- Чтобы поменять адрес просто замените непонятный набор букв после /models/... на тот что указан в адресной строке после /models/
         Но ?preload=1 должно остаться! -->
     </p></div>
-    <div class="sketchfab-embed-wrapper"><iframe width="100%" class="formatter youtube-iframe" src="https://sketchfab.com/models//embed?preload=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div></div>
+    <div class="sketchfab-embed-wrapper"><iframe width="100%" class="formatter youtube-iframe" src="https://sketchfab.com/models/1bc048b45186483680f61ba5f8c6a6b6/embed?preload=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div></div>
     <!-- Тут заканчивается шаблон для Sketchfab -->
 
 
