--- a/index.html
+++ b/index.html
@@ -188,21 +188,20 @@
     <div class="carousel-item green white-text formatter" href="#two!"><div class="title-container"><h2>
 
 
-      Название работы
-
+      Свалка
     
     </h2><p class="white-text">
 
 
   
-      Описание
+      Это обыкновенная свалка в переулке
 
 
 
       <!-- Чтобы поменять адрес просто замените непонятный набор букв после /models/... на тот что указан в адресной строке после /models/
         Но ?preload=1 должно остаться! -->
     </p></div>
-    <div class="sketchfab-embed-wrapper"><iframe width="100%" class="formatter youtube-iframe" src="https://sketchfab.com/models/24104d98d5ea4a0baff020c38775e844/embed?preload=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div></div>
+    <div class="sketchfab-embed-wrapper"><iframe width="100%" class="formatter youtube-iframe" src="https://sketchfab.com/models/e6dab667c30e484f89fc3c77d49e2d9b/embed?preload=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div></div>
     <!-- Тут заканчивается шаблон для Sketchfab -->
 
 
