--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 
-          Я учусь в 5-ом "А" классе 5-ой школы. Люблю читать фэнтези книги, рисовать, моделировать, болтать на разные темы с друзьями и пить лимонный чай.
+          Я учусь в 5-ом "А" классе 5-ой школы. Люблю лимонный чай, читать фэнтези книги, рисовать, моделировать, и болтать на разные темы с друзьями.
 
 
 
